# cloud-print-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
addresses/: domkerk-utrecht.toml
orders/: btcwip-example.toml
src/: cli.rs  cloudprinter.rs  config.rs  github.rs  lib.rs  main.rs  order.rs  output.rs
tests/: cli.rs
