[package]
name = "cloud-print-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
md5 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
